# taskforge

./: .gitignore  INTEGRATIONS.md  INTEROP.md  README.md  SOURCES.md  pyproject.toml
demos/01-basic/: SCENARIO.md  taskforge.yaml
docs/: USAGE.md
examples/: help.txt  version.txt
taskforge/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
tests/: test_connect.py  test_deep.py  test_features.py  test_smoke.py
