[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-taskforge"
version = "0.1.1"
description = "Declarative YAML task runner with deps, includes, matrix & dry-run"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "task-runner", "devtools", "automation", "ci", "cli", "self-hosted", "cognis-neural-suite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/taskforge"

[project.scripts]
"taskforge-emit" = "taskforge.connect:emit_main"
taskforge = "taskforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["taskforge"]
